Various Sonar complaints fixed.
git-svn-id: https://svn.apache.org/repos/asf/roller/trunk@1520708 13f79535-47bb-0310-9956-ffa450edef68